<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityGame</string>
    <string name="action_settings">Settings</string>
    <string name="create_profile">Создать профиль</string>
    <string name="select_profile">Выбрать профиль</string>
    
    
    <string name="profile_create_name">Имя</string>
    <string name="profile_create_password">Пароль</string>
    <string name="profile_create_blank_password"></string>
    <string name="profile_create_ok">OK</string>
    
    <string name="profile_main_start_game">Начать игру</string>
    <string name="profile_main_cities_info">Города</string>
    <string name="profile_main_change_profile">Сменить игрока</string>
    <string name="profile_main_settings">Настройки</string>
    <string name="profile_main_about">О игре</string>
    
    <string name="activity_game_process_button_ok">OK</string>
    
    <string name="profile_select_input_pwd_ok_button">OK</string>
    

</resources>
