<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/profile_main_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_main_start_game" />

    <Button
        android:id="@+id/profile_main_cities_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_main_cities_info" />

    <Button
        android:id="@+id/profile_main_change_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_main_change_profile" />

    <Button
        android:id="@+id/profile_main_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_main_settings" />

    <Button
        android:id="@+id/profile_main_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_main_about" />

</LinearLayout>